Refactoring for splitting rest api handlers, register in router
