# internal/models/simple_message.go
@@ -1,0 +1,6 @@
+package models
+
+type SimpleMessage struct {
+	ID   string `json:"id"`
+	Data string `json:"data"`
+}
